# sdgs-tools

./: .gitignore  README.md  form-desa.js  form-individu.js  form-keluarga.js  form-tetangga.js  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md  Template Individu Dashboard SDGS Kemendesa.xlsm  Template Individu Dashboard SDGS Kemendesa.xlsx  Template Keluarga Dashboard SDGS Kemendesa.xlsm  Template_Individu-Dashboard_SDGS.xlsm  Template_Individu-Eksport-Aplikasi_SDGS.xlsx  Template_Keluarga-Dashboard_SDGS.xlsm  Template_Keluarga-Eksport-Aplikasi_SDGS.xlsx  donatur.md
sdgs_tools/: __main__.py  export.py  utils.py
sdgs_tools/aplikasi_sdgs/: excel.py  export.py  utils.py
sdgs_tools/aplikasi_sdgs/export/: __init__.py  individu.py  keluarga.py
sdgs_tools/aplikasi_sdgs/export_individu/: __init__.py  disabilitas.py  individu.py  pekerjaan.py  pendidikan.py  penghasilan.py
sdgs_tools/aplikasi_sdgs/export_keluarga/: __init__.py  kesehatan.py  lain_lain.py  lokasi.py  pendidikan.py  sarpras.py  tenaga_kesehatan.py
sdgs_tools/aplikasi_sdgs/individu/: __init__.py  disabilitas.py  individu.py  kesehatan.py  pekerjaan.py  pendidikan.py  penghasilan.py  utils.py
sdgs_tools/aplikasi_sdgs/keluarga/: __init__.py  kesehatan.py  lain_lain.py  lokasi.py  pendidikan.py  sarpras.py  tenaga_kesehatan.py
sdgs_tools/cli/: __init__.py  aplikasi.py  exporter.py
sdgs_tools/cli/aplikasi/: __init__.py  export.py  template.py
sdgs_tools/cli/dashboard/: __init__.py  individu.py  keluarga.py  template.py
sdgs_tools/dashboard/: __init__.py  base.py  edit_individu.py  response.py  sdgs.py  utils.py
sdgs_tools/dashboard/auth/: base.py  token.py
sdgs_tools/dashboard/enums/: __init__.py  agama.py  akses_internet.py  diekspor.py  jenis_kelamin.py  kecepatan_internet.py  keterbukaan_desa.py  kondisi_pekerjaan.py  pekerjaan_utama.py  pelayanan_desa.py  pendidikan.py  status_pernikahan.py  sumber_penghasilan.py  util.py  warganegara.py  ya_tidak.py
sdgs_tools/dashboard/import_individu/: __init__.py  data_individu.py  (+5 more)
sdgs_tools/ext/: export.py
sdgs_tools/gui/: __init__.py  aplikasi.py  content.py  dashboard.py  form.py  main.py  sidebar.py  ya_tidak.py
sdgs_tools/sdgs/: __init__.py  base.py  response.py  sdgs.py  utils.py
tests/: test_sdgs_tools.py
(+77 files in other folders)
