[tool.poetry]
name = "sdgs-tools"
version = "0.1.0"
description = ""
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
beautifulsoup4 = "^4.9.3"
openpyxl = "^3.0.7"
click = "^8.0.1"
python-dateutil = "^2.8.1"
pyinstaller = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^21.5b1"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
